# HighscoreServer

./: .gitignore  CMakeLists.txt  README.md  highscoreserver
include/: highscore.h
src/: highscore.c  highscore_checksum.c  main.c
